# Vehicle-Insurance-Prediction-MLOPS

./: LICENSE  demo.py  pyproject.toml  requirements.txt  setup.py  template.py
artifact/11_09_2025_15_46_13/data_transformation/transformed_object/: preprocessing.pkl
artifact/11_09_2025_16_25_43/data_transformation/transformed_object/: preprocessing.pkl
notebook/: exp-notebook.ipynb  mongoDB_demo.ipynb  rf_model.pkl
src/components/: data_ingestion.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/pipline/: training_pipeline.py
